--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="game">
+    <div class="gameContainer">
+        <div class="logo">FIFTEEN PUZZLE</div>
+
+        <div id="game">
+            </div>
+
+        <div class="button">
+            <button type="button">START</button>
         </div>
+    </div>
 
     <script src="index.js"></script>
 
